// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for NotificationsContainer Verify if NotificationsContainer renders 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main tooltipStyle notificationsContainer StyledProps--margin-xxlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
    >
      <div
        class="Text--withDocsTooltip"
        data-tooltip-id="healthSourcesLabel"
      >
        <p
          class="StyledProps--font StyledProps--main tableTitle"
        >
          cv.notifications.errorBudgetPolicies
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main NoDataCard--noDataCard notificationsNoData StyledProps--flex StyledProps--flex-align-center-center"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          style="align-items: center; margin-top: -48px; width: 470px;"
        >
          <img
            src="test-file-stub"
          />
          <p
            class="StyledProps--font StyledProps--main NoDataCard--message StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
          >
            There are no notifications
          </p>
          <div
            class="NoDataCard--buttonContainer"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-primary"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                icon="plus"
              >
                <svg
                  data-icon="plus"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    plus
                  </desc>
                  <path
                    d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                cv.notifications.newNotificationRule
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for NotificationsContainer Verify if NotificationsContainer renders for notification type MONITORED_SERVICE 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main tooltipStyle notificationsContainer StyledProps--margin-xxlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
    >
      <div
        class="Text--withDocsTooltip"
        data-tooltip-id="healthSourcesLabel"
      >
        <p
          class="StyledProps--font StyledProps--main tableTitle"
        >
          notifications.name
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main NoDataCard--noDataCard notificationsNoData StyledProps--flex StyledProps--flex-align-center-center"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          style="align-items: center; margin-top: -48px; width: 470px;"
        >
          <img
            src="test-file-stub"
          />
          <p
            class="StyledProps--font StyledProps--main NoDataCard--message StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
          >
            There are no notifications
          </p>
          <div
            class="NoDataCard--buttonContainer"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-primary"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                icon="plus"
              >
                <svg
                  data-icon="plus"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    plus
                  </desc>
                  <path
                    d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                cv.notifications.newNotificationRule
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for NotificationsContainer Verify if NotificationsContainer renders for notification type SERVICE_LEVEL_OBJECTIVE 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main tooltipStyle notificationsContainer StyledProps--margin-xxlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
    >
      <div
        class="Text--withDocsTooltip"
        data-tooltip-id="healthSourcesLabel"
      >
        <p
          class="StyledProps--font StyledProps--main tableTitle"
        >
          cv.notifications.errorBudgetPolicies
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main NoDataCard--noDataCard notificationsNoData StyledProps--flex StyledProps--flex-align-center-center"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          style="align-items: center; margin-top: -48px; width: 470px;"
        >
          <img
            src="test-file-stub"
          />
          <p
            class="StyledProps--font StyledProps--main NoDataCard--message StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
          >
            There are no notifications
          </p>
          <div
            class="NoDataCard--buttonContainer"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-primary"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                icon="plus"
              >
                <svg
                  data-icon="plus"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    plus
                  </desc>
                  <path
                    d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                cv.notifications.newNotificationRule
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for NotificationsContainer Verify if NotificationsContainer renders no notifications screen when there are no notificatons 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main tooltipStyle notificationsContainer StyledProps--margin-xxlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
    >
      <div
        class="Text--withDocsTooltip"
        data-tooltip-id="healthSourcesLabel"
      >
        <p
          class="StyledProps--font StyledProps--main tableTitle"
        >
          cv.notifications.errorBudgetPolicies
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main NoDataCard--noDataCard notificationsNoData StyledProps--flex StyledProps--flex-align-center-center"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          style="align-items: center; margin-top: -48px; width: 470px;"
        >
          <img
            src="test-file-stub"
          />
          <p
            class="StyledProps--font StyledProps--main NoDataCard--message StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
          >
            There are no notifications
          </p>
          <div
            class="NoDataCard--buttonContainer"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-primary"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                icon="plus"
              >
                <svg
                  data-icon="plus"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    plus
                  </desc>
                  <path
                    d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                cv.notifications.newNotificationRule
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for NotificationsContainer Verify if NotificationsContainer renders notificationsTable with data when there are notofications present 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main tooltipStyle notificationsContainer StyledProps--margin-xxlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
    >
      <div
        class="Text--withDocsTooltip"
        data-tooltip-id="healthSourcesLabel"
      >
        <p
          class="StyledProps--font StyledProps--main tableTitle"
        >
          cv.notifications.errorBudgetPolicies
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="Layout--horizontal StyledProps--main headerActions StyledProps--flex"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-primary"
            id="newNotificationBtn"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
              icon="plus"
            >
              <svg
                data-icon="plus"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  plus
                </desc>
                <path
                  d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              notifications.name
            </span>
          </button>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main content StyledProps--padding-bottom-huge"
      >
        <div
          class="TableV2--table notificationTable"
        >
          <div
            class="TableV2--header"
            role="row"
          >
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 20%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                ENABLEDLABEL
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                CV.NOTIFICATIONS.NOTIFICATIONNAME
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                CATEGORY
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 28%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                NOTIFICATIONS.NOTIFICATIONMETHOD
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 2%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                
              </p>
            </div>
          </div>
          <div
            class="TableV2--body"
          >
            <div
              class="TableV2--row TableV2--card"
              role="row"
            >
              <div
                class="TableV2--cells"
              >
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 20%;"
                >
                  <label
                    class="bp3-control bp3-switch StyledProps--font Switch--switch StyledProps--main"
                  >
                    <input
                      type="checkbox"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                  </label>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 25%;"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                    style="--text-line-clamp: 1;"
                  >
                    asasas
                  </p>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 25%;"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                    style="--text-line-clamp: 1;"
                  >
                    SLO
                  </p>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 28%;"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="service-slack"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 14 14"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="#e01e5a"
                        >
                          <path
                            d="M3 8.8c0 .8-.7 1.5-1.5 1.5S0 9.6 0 8.8s.7-1.4 1.5-1.4H3zM3.7 8.8c0-.8.7-1.5 1.5-1.5s1.4.7 1.4 1.5v3.7c0 .8-.6 1.5-1.4 1.5s-1.5-.7-1.5-1.5z"
                          />
                        </g>
                        <g
                          fill="#36c5f0"
                        >
                          <path
                            d="M5.2 3c-.8 0-1.5-.7-1.5-1.5S4.4 0 5.2 0s1.5.7 1.5 1.5V3zM5.2 3.7c.8 0 1.5.7 1.5 1.5S6 6.6 5.2 6.6H1.5C.7 6.6 0 6 0 5.2s.7-1.5 1.5-1.5z"
                          />
                        </g>
                        <g
                          fill="#2eb67d"
                        >
                          <path
                            d="M11 5.2c0-.8.7-1.5 1.5-1.5s1.5.7 1.5 1.5-.7 1.5-1.5 1.5H11zM10.3 5.2c0 .8-.7 1.5-1.5 1.5C8 6.6 7.4 6 7.4 5.2V1.5C7.4.7 8 0 8.8 0s1.5.7 1.5 1.5z"
                          />
                        </g>
                        <g
                          fill="#ecb22e"
                        >
                          <path
                            d="M8.8 11c.8 0 1.5.7 1.5 1.5S9.6 14 8.8 14s-1.5-.7-1.5-1.5V11zM8.8 10.3c-.8 0-1.5-.7-1.5-1.5.1-.8.7-1.4 1.5-1.4h3.7c.8 0 1.5.6 1.5 1.4s-.7 1.5-1.5 1.5z"
                          />
                        </g>
                      </svg>
                    </span>
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      Slack
                    </p>
                  </div>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 2%;"
                >
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey350 Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon Button--variation Button--variation-icon"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Options"
                        >
                          <svg
                            fill="currentColor"
                            height="16"
                            viewBox="0 0 4 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="2"
                              cy="2"
                              r="1.5"
                            />
                            <circle
                              cx="2"
                              cy="8"
                              r="1.5"
                            />
                            <circle
                              cx="2"
                              cy="14"
                              r="1.5"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main TableV2--pagination Pagination--container StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-distribution-space-between"
          >
            <span
              class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-variation-small-semi"
            >
              1
               of 
              1
            </span>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonLeft Button--with-current-color Button--withLeftIcon Button--size Button--small"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-arrow-left StyledProps--main StyledProps--padding-right-xsmall"
                  icon="arrow-left"
                >
                  <svg
                    data-icon="arrow-left"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      arrow-left
                    </desc>
                    <path
                      d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  Prev
                </span>
              </button>
              <button
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--selected Button--with-current-color"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  1
                </span>
              </button>
              <button
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonRight Button--with-current-color Button--withRightIcon Button--size Button--small"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Next
                </span>
                <span
                  class="bp3-icon bp3-icon-arrow-right StyledProps--main"
                  icon="arrow-right"
                >
                  <svg
                    data-icon="arrow-right"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      arrow-right
                    </desc>
                    <path
                      d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <span>
              Showing 10 per page
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
